styles.css
/* ... */
#hero-intro {
    color: var(--text-third-color);
}

#hero-job {
    color: var(--text-secondary-color);
}

#hero-button-container {
    display: inline-block;
    padding-right: 1em;
    margin-bottom: 5em;
}

/*
.nav-indicator {
    display: inline-block;
    background-color: var(--border-color);
    width: 2em;
    height: 1px;
    margin-right: 1em;
}


.nav-menu-item:hover a.nav-menu-link  {
    color: var(--text-secondary-color);
}

.nav-menu-item:hover .nav-indicator {
    background-color: var(--text-secondary-color);
}
    */


/******************************************************************************
                        ABOUT ME SECTION
******************************************************************************/

#about-description-content {
    border: 2px, var(--border-color), solid;
    border-radius: 0.5em;
    box-shadow: 5px 5px;
    padding: 1em;
    color: var(--border-color);
    
}


/******************************************************************************
                        SKILLS AND EXPERIENCE SECTION
******************************************************************************/

#skills-content-container {
    display: flex;
    flex-direction: column;
    gap: 2em;
}

#skill-languages-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 1em;
    border: 2px, var(--border-color), solid;
    border-radius: 0.5em;
    box-shadow: 5px 5px;
    color: var(--border-color);
    
}

#skill-icons-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 1em;
    border: 3px, var(--border-color), solid;
    border-radius: 0.5em;
    box-shadow: 5px 5px;
    color: var(--border-color);
    
}

.skill-icons-row {
    padding: 1em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.skill-icons-row:nth-child(1) {
    transition-delay: 0ms;
}

.skill-icons-row:nth-child(2) {
    transition-delay: 0ms;
}

.skill-icons-row:nth-child(3) {
    transition-delay: 0ms;
}

.skills-button {
    text-decoration: none;
}

.skills-button-icon {
    height: 64px;
    width: 64px;
}


/******************************************************************************
                            PORTFOLIO SECTION
*******************************************************************************/

#portfolio-section {
    border-bottom: none;
}

#projects-container {
    display: flex;
    flex-direction: column;
    gap: 2em;
    margin-bottom: 5em;
}

.project-container {
    padding: 1em;
    border: 0.1em, var(--border-color), solid;
    border-radius: 0.5em;
    display: flex;
    flex-direction: row;
    align-items: center;
    box-shadow: 5px 5px;
    color: var(--border-color);
}
/*
.project-container:nth-child(1){
    transition-delay: 200ms;
}
.project-container:nth-child(2) {
    transition-delay: 300ms;
}
.project-container:nth-child(3) {
    transition-delay: 400ms;
}
.project-container:nth-child(4) {
    transition-delay: 500ms;
}
.project-container:nth-child(5) {
    transition-delay: 600ms;
}*/

/*
*****************
*****************
*****************
END ROOT VALUES
*****************
*****************
*****************
*/

/******************************************************************************
                    MEDIA QUERIES FOR RESPONSIVENESS
*******************************************************************************/

/*
-extra small devices (phones, 600px and down)
*/
@media only screen and (max-width: 599.99px) {
    
    html, body {
        min-width: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0;
        font-family: var(--font-family);
        color: var(--text-primary-color);
        background: var(--background-color);
        
    }

    #container {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 2rem;
        padding-right: 2rem;
        padding-top: 3rem;
        min-width: auto;
    }
    
    
    #hero {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        position: relative;
        width: auto;
        top: 0;
    }
    
    #hero::-webkit-scrollbar {
        display: none;
    }
        
    #main {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: auto;
        margin-left: none;
        overflow: auto;
    }
    
    #main::-webkit-scrollbar {
        display: none;
    }
    
    .section-header-container {
        display:flex;
        flex-direction: column;
        align-items: flex-start;
        margin-top: 3rem;
    }

    nav {
        visibility: hidden;
    }

}

/*
-small devices (portrait tablets and large phones, 600px to 768px)
*/
@media only screen and (min-width: 600px) and (max-width: 767.9px) {
    
    html, body {
        display: flex;
        flex-direction: column;
        align-items: center;
        min-width: auto;
        margin: 0;
        font-family: var(--font-family);
        color: var(--text-primary-color);
        background: var(--background-color);
        
    }

    body::-webkit-scrollbar {
        display: none;
    }
    
    #container {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-top: 3rem;
        min-width: auto;
    }

    #hero {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        position: relative;
        width: auto;
        top: 0;
    }

    #main {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: auto;
        margin-left: none;
        overflow: auto;
    }

    nav {
        visibility: hidden;
     }    
}
/* ... */

